fix: tirei o wrap

--- a/src/app/details/details.component.scss
+++ b/src/app/details/details.component.scss
@@ -7,7 +7,7 @@
    justify-content: space-between;
    align-items: center;
    flex-direction: row-reverse;
-   flex-wrap: wrap;
+
 
    color: var(--color-5);
 }
